# RacingGame

./: .gitignore  .gitmodules
Game/MyProject/: CMakeLists.txt  Road.cpp  Road.hpp
Game/MyProject/Common.xcodeproj/: project.pbxproj
Game/MyProject/Common.xcodeproj/xcshareddata/xcschemes/: Game.xcscheme
Game/MyProject/DeferredRendering/: DeferredRenderer.cpp  DeferredRenderer.hpp
Game/MyProject/Game/: Camera.cpp  Camera.hpp  CameraTestControler.cpp  CameraTestControler.hpp  Debug.txt  Game.cpp  Game.h  Game.hpp  RenderPacketTest.cpp  RenderPacketTest.hpp
Game/MyProject/Game/BasicMenu/: BuildTrack.cpp  BuildTrack.hpp  BuildTrackMenu.cpp  BuildTrackMenu.hpp  Car.cpp  Car.hpp  CarMenu.cpp  CarMenu.hpp  ChooseTrack.cpp  ChooseTrack.hpp  ChooseTrackMenu.cpp  ChooseTrackMenu.hpp  Credits.cpp  Credits.hpp  CreditsMenu.cpp  CreditsMenu.hpp  FirstMenu.cpp  FirstMenu.hpp  GameOver.cpp  GameOver.hpp  Highscores.cpp  Highscores.hpp  HighscoresMenu.cpp  HighscoresMenu.hpp  InfoMenu.cpp  InfoMenu.hpp  Menu.cpp  Menu.hpp  PauseMenu.cpp  PauseMenu.hpp  RaceMenu.cpp  RaceMenu.hpp  Start.cpp  Start.hpp  StartMenu.cpp  StartMenu.hpp  TestMenu.cpp  TestMenu.hpp  Track.cpp  Track.hpp  (+2 more)
Game/MyProject/Game/BasicMenu/Resources/: credits.tga  exit.tga  font.tga  font_.tga  game.tga  highscore.tga  race_quit.tga  race_resume.tga  race_retry.tga  roadTexture_.tga  test.tga  tr_add.tga  tr_back.tga  tr_build.tga  tr_choose.tga  tr_generate.tga  tr_next.tga  tr_play.tga  tr_previous.tga  tr_remove.tga  tr_save.tga
Game/MyProject/Game/BasicMenu/Shaders/: AlphaChanger.glslf  AlphaChanger.glslv  AtlasSpriteShader.glslf  AtlasSpriteShader.glslv  Clouds.glslf  Clouds.glslv  TestShader.glslf  TestShader.glslv
Game/MyProject/Game/Bezier/: BezierCurve.cpp  BezierCurve.hpp
Game/MyProject/Game/Car/: CarController.cpp  CarController.hpp
Game/MyProject/Game/CollisionSystem/: CollisionSystem.cpp  CollisionSystem.hpp
Game/MyProject/Game/DeferredRendering/: DeferredRenderer.cpp  DeferredRenderer.hpp
Game/MyProject/Game/Environment/: Environment.cpp  Environment.hpp  PerlinNoise.cpp  PerlinNoise.hpp  SkyBox.cpp  SkyBox.hpp  Terrain.cp  Terrain.cpp  Terrain.hpp
Game/MyProject/Game/Environment/Resources/: hill2_down.tga  hill_down.tga  terrain.tga
Game/MyProject/Game/Environment/Shaders/: BasicShader.glslf  BasicShader.glslv  Noise.glslv  TerrainShader.glslf  TerrainShader.glslv  TextureShader.glslf  TextureShader.glslv
Game/MyProject/Game/GameStates/: BuildTrackState.cpp  CreditsState.cpp  FirstState.cpp  GameOverState.cpp  GameStates.hpp  HighScoreState.cpp  InfoState.cpp  MenuState.cpp  PauseState.cpp  RaceState.cpp  SelectCarState.cpp  SelectTrackState.cpp  StateController.cpp  StateController.hpp  TestState.cpp  TrackState.cpp
Game/MyProject/Game/Gameplay/: InfoManager.cpp  InfoManager.hpp
Game/MyProject/Game/Helper/: HelperClass.cpp  HelperClass.h  HelperManager.cpp  HelperManager.h  HelperManager.hpp  HelperRender.cpp  HelperRender.h  HelperSceneNode.cpp  HelperSceneNode.hpp  MeshManager.cpp  MeshManager.h  MeshManager.hpp  MyHelperSceneNode.cpp  MyHelperSceneNode.h  RenderPrimitiveUtils.cpp  RenderPrimitiveUtils.h  Shader.glslf
Game/MyProject/Game/Helper/Resources/: cross.tga
Game/MyProject/Game/Helper/Shaders/: BasicShader.glslf  BasicShader.glslv  BasicShader1.glslf  TextureShader.glslf  TextureShader.glslv  TexturedShader.glslf  TexturedShader.glslv
Game/MyProject/Game/ModelLoader/: ModelLoader.cpp  ModelLoader.hpp
Game/MyProject/Game/Player/: Player.cpp  Player.hpp
Game/MyProject/Game/RayBoxIntersection/: RayBoxIntersection.cpp  RayBoxIntersection.hpp
Game/MyProject/Game/ResourceManager/: ResourceManager.cpp  ResourceManager.hpp
Game/MyProject/Game/RoadGenerator/: BezierCurve.cpp  BezierCurve.hpp  RoadEditor.cpp  RoadEditor.hpp  RoadGenerator.cpp  RoadGenerator.hpp  RoadGeneratorControler.cpp  RoadGeneratorControler.hpp  RoadImporterExporter.cpp  RoadImporterExporter.hpp  RoadMargins.cpp  RoadMargins.hpp
Game/MyProject/Game/RoadGenerator/Resources/: road.tga
Game/MyProject/Game/RoadGenerator/Shaders/: roadShader.glslf  roadShader.glslv  testShader.glslf  testShader.glslv
Game/MyProject/Game/SceneManagement/: BoundingBox.cpp  BoundingBox.hpp  CameraAnimator.cpp  CameraAnimator.hpp  CameraFollowAnimator.cpp  CameraFollowAnimator.hpp  CameraSceneNode.cpp  CameraSceneNode.hpp  CarAnimator.cpp  CarAnimator.hpp  CarController.cpp  CarController.hpp  Mesh.cpp  Mesh.hpp  MeshInstance.cpp  MeshInstance.hpp  NodeAnimator.cpp  NodeAnimator.hpp  NodeTransform.cpp  NodeTransform.hpp  RenderPacket.cpp  RenderPacket.hpp  RoadNode.cpp  RoadNode.hpp  SceneGraph.cpp  SceneGraph.hpp  SceneNode.cpp  SceneNode.hpp  TextAnimator.cpp  TextAnimator.hpp
Game/MyProject/Game/Shader/: testShader.glslf  testShader.glslv
Game/MyProject/Game/Test/Resources/: b1.tga  player.tga
Game/MyProject/Game/shaders/: example_shader.glslf  example_shader.glslv
Game/MyProject/IvEngine/: IvGame.cpp
Game/MyProject/IvEngine/OGL/: IvMainOGL.cpp
Game/MyProject/IvGraphics/: IvFrameBuffer.h  IvRenderTarget.h  IvRenderer.cpp  IvRenderer.h  IvRendererHelp.cpp  IvResourceManager.h  IvShaderProgram.h  IvVertexFormats.h  IvVertexShader.h
Game/MyProject/IvGraphics/IvGraphics.xcodeproj/: project.pbxproj
Game/MyProject/IvGraphics/OGL/: IvCustomVertexFormat.cpp  IvFrameBufferOGL.cpp  IvFrameBufferOGL.h  IvRenderTargetOGL.cpp  IvRenderTargetOGL.h  IvRendererOGL.cpp  IvRendererOGL.h  IvResourceManagerOGL.cpp  IvResourceManagerOGL.h  IvShaderProgramOGL.cpp  IvShaderProgramOGL.h  IvUniformOGL.cpp  IvVertexBufferOGL.cpp  IvVertexBufferOGL.h  IvVertexShaderOGL.cpp  IvVertexShaderOGL.h
Game/MyProject/IvMath/: IvRay3.cpp  IvVector3.cpp  IvVector3.h
Game/MyProject/Shaders/: blur_shader.glslf  debug_shader.glslv  example_shader.glslf  example_shader.glslv  first_pass_shader.glslf  first_pass_shader.glslv  map_shader.glslf  position_shader.glslf  position_shader.glslv  second_pass_shader.glslf  second_pass_shader.glslv  simple_shader.glslf
Game/MyProject/Textures/: large.tga  pink.tga
(+34 files in other folders)
